--- a/css bio.css
+++ b/css bio.css
@@ -27,3 +27,29 @@ body{
   padding-right: 5%;
 
 }
+
+.menu h1{
+  font-family: Yallowtail;
+}
+
+.menu a{
+  text-decoration: underline overline dotted #d266c1;
+  text-decoration-thickness: 10%;
+  margin-left:10%
+
+}
+
+.boxstoria{
+	border:3px solid;
+	border-color:#66ccff;
+	width:1200px;
+	height:400px;
+	margin-left:330px;
+	margin-right:200px;
+	margin-top:5%;
+	border-radius:10px;
+	background-color:white;
+	text-align:center;
+	font-size:20px;
+	
+}
