--- a/css bio.css
+++ b/css bio.css
@@ -4,6 +4,7 @@
 }
 body{
   background-image: url("sfondo.png");
+  background-size: cover;
   position: absolute;
 
 }
@@ -51,5 +52,5 @@ body{
 	background-color:white;
 	text-align:center;
 	font-size:20px;
-	
+
 }
