--- a/css bio.css
+++ b/css bio.css
@@ -3,7 +3,7 @@
   src: url('Yellowtail-Regular.ttf') format('truetype');
 }
 body{
-  background-image: url("sfondo.png");
+  background-image: url("media/sfondo.png");
   position: absolute;
 
 }
