--- a/css bio.css
+++ b/css bio.css
@@ -59,20 +59,22 @@ body{
 	border-color:#66ccff;
 	width:80%;
 	height:80%;
-	
+
 	margin-top:5%;
 	border-radius:10px;
 	background-color:white;
 	text-align:center;
 	font-size:20px;
 
+
 }
 
 
 .subbody{
-  /*border: 2px solid black;*/
+  border: 2px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
 
 }
